--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,10 @@ Maintainer: Darren Norris <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Imports:
-    sf
+    sf,
+    dplyr,
+    magrittr,
+    units
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
