--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(prepBasin)
 export(prepPA)
 export(prepPAcountry)
 export(prepPAcover)
+export(prepTabcover)
 import(dplyr)
 import(sf)
 importFrom(magrittr,"%>%")
