--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(prepPA)
 export(prepPAcountry)
 export(prepPAcover)
 export(prepTabcover)
+export(resTab)
 import(dplyr)
 import(sf)
 importFrom(magrittr,"%>%")
