--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,14 +6,14 @@ Author: Darren Norris [cre, aut]
 Maintainer: Darren Norris <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-Imports:
-    dplyr,
+Imports: dplyr,
     htmlTable,
     lwgeom,
     magrittr,
     plyr,
     reshape2,
     rnaturalearth,
+    rnaturalearthdata,
     sf,
     units
 License: file LICENSE
