Code for Figure 1.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,9 @@ Maintainer: Darren Norris <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Imports: dplyr,
+    ggplot2,
+    gridExtra,
+    grDevices,
     htmlTable,
     lwgeom,
     magrittr,
