--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,13 @@ export(prepPA)
 export(prepPAcountry)
 export(prepPAcover)
 export(prepTabcover)
+export(resFig1)
 export(resTab)
 import(dplyr)
+import(ggplot2)
 import(sf)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
+importFrom(gridExtra,grid.arrange)
 importFrom(magrittr,"%>%")
 importFrom(utils,memory.limit)
