--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(resTab)
 import(dplyr)
 import(ggplot2)
 import(sf)
+import(sp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(gridExtra,grid.arrange)
 importFrom(magrittr,"%>%")
+importFrom(methods,as)
 importFrom(utils,memory.limit)
