--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ importFrom(grDevices,png)
 importFrom(gridExtra,grid.arrange)
 importFrom(magrittr,"%>%")
 importFrom(methods,as)
+importFrom(stats,na.omit)
 importFrom(utils,memory.limit)
