Add raster to figure 1.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports: dplyr,
     sf,
     sp,
     stats,
-    units
+    units,
+    viridis
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
