--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,4 @@ importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(stats,na.omit)
 importFrom(utils,memory.limit)
+importFrom(viridis,scale_fill_viridis)
