--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(prepPAcountry)
 export(prepPAcover)
 export(prepTabcover)
 export(resFig1)
+export(resFig4)
 export(resTab)
 export(resTabDemog)
 import(dplyr)
