--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ import(ggplot2)
 import(sf)
 import(sp)
 importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
 importFrom(grDevices,png)
 importFrom(gridExtra,grid.arrange)
 importFrom(magrittr,"%>%")
