--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,15 @@ Title: Functions for processing and analysing river turtle management
 Version: 0.1.0
 Author: Darren Norris [cre, aut]
 Maintainer: Darren Norris <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Provides functions for demographic analysis of 
+river turtle management options. Functions are organized in three groups, 
+by name: "prep.." , "Pop..." and "res..." .
+    "prep.." are functions used to generate spatial layers 
+(poygons and raster files), with countries, catchments, rivers,
+protected areas and human accessibility.
+    "Pop..." are functions used for modelling population demographics.
+    "res..." are functions used to generate results, 
+producing tables and figures.
 Imports: dplyr,
     ggplot2,
     gridExtra,
