--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,13 @@ Type: Package
 Title: Functions for processing and analysing river turtle management
 Version: 0.1.0
 Author: Darren Norris [cre, aut]
-Maintainer: Darren Norris <yourself@somewhere.net>
-Description: Provides functions for demographic analysis of 
-    river turtle management options. Functions are organized in three groups, 
-    by name: "prep.." , "Pop..." and "res..." .
+Maintainer: Darren Norris <dnorris75@gmail.com>
+Description: Provides functions for the demographic analysis of 
+    river turtle management options. 
+    Functions are organized by name in three groups: 
+    "prep.." , "Pop..." and "res..." .
     "prep.." are functions used to generate spatial layers 
-    (poygons and raster files), with countries, catchments, rivers,
+    (vector and raster files), with countries, catchments, rivers,
     protected areas and human accessibility.
     "Pop..." are functions used for modelling population demographics.
     "res..." are functions used to generate results, 
