add new figure 3.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(PopPrep)
 export(PopProj)
 export(PopScen)
 export(PopScenAcess)
+export(PopScenLambda)
 export(prepBasin)
 export(prepPA)
 export(prepPAcountry)
@@ -14,7 +15,8 @@ export(resFig2)
 export(resFig3)
 export(resFig4)
 export(resFig5)
-export(resFig5c)
+export(resFig6)
+export(resFig6c)
 export(resTab)
 export(resTabDemog)
 import(dplyr)
